# pysh

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/pysh/: __init__.py
src/pysh/api/: __init__.py  client.py  schema.py
tests/: test_client.py
